--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.pem
 .Rhistory
 Lecture_[0-9][0-9].Rmd
 Lecture_[0-9][0-9].md
@@ -21,3 +22,4 @@ groups-output/
 mini-groups-output/
 groups.txt
 *.swp
+AWS/
